--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,9 +10,9 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/forum
-    username: postgres
-    password: Destd1212!
+    url: ${LOCAL_DB_URL}
+    username: ${LOCAL_DB_USERNAME}
+    password: ${LOCAL_DB_PASSWORD}
   jpa:
     defer-datasource-initialization: true
     hibernate.ddl-auto: create
@@ -28,12 +28,12 @@ spring:
   thymeleaf3:
       decoupled-logic: true
   security:
+    csrf:
+      enabled: false
     oauth2:
       client:
         registration:
           kakao:
-            client-id: ${KAKAO_OAUTH_CLIENT_ID}
-            client-secret: ${KAKAO_OAUTH_CLIENT_SECRET}
             authorization-grant-type: authorization_code
             redirect-uri: "{baseUrl}/login/oauth2/code/kakao"
             client-authentication-method: client_secret_post
